# execenv

./: Cargo.toml  LICENSE-MIT  README.en.md  README.md  README.ru.md  coverage.xml
.github/workflows/: check.yml  ci.yml  coverage.yml  release.yml
src/: args.rs  cli.rs  envsubst.rs  main.rs  run_process.rs  utils.rs
src/envsubst/: parser.rs
tests/: e2e.rs
