[package]
name = "execenv"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "A light entrypoint wrapper: substitute ${VAR} placeholders in files, then exec into another process"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dsk13-stack/execenv"
readme = "README.md"
keywords = ["envsubst", "env-vars", "cli", "docker", "entrypoint"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

